# turbo-csv

./: CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflow/: ci.yml
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  reader_benchmark.cpp
include/: csv_file_reader.hpp  default_file_reader.hpp  dialect.hpp  exceptions.hpp  fstream_adaptor.hpp  record.hpp  turbo_csv.hpp  turbo_parser.hpp
test/: CMakeLists.txt  core.cpp  dialect.cpp  features_test.cpp  file_reader.cpp  record.cpp  turbo_csv.cpp
test/test_files/: annual_enterprise.csv  cars.csv
